# undms

./: .gitattributes  .gitignore  .oxfmtrc.json  .oxfmtrc.jsonc  .oxlintrc.json  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE.md  index.d.ts  index.js  index.mjs  package.json  pnpm-lock.yaml
.github/workflows/: CI.yaml  CI.yml  docs.yml
__test__/: index.spec.ts
__test__/documents/: csv.csv  docx.docx  pptx.pptx  xlsx.xlsx
__test__/generators/: docx-generator.ts  image-generator.ts  pdf-generator.ts  pptx-generator.ts  xlsx-generator.ts
benchmark/: bench-documents.ts  bench-image.ts  bench-similarity.ts  bench-text.ts  bench.ts  common.ts
docs/: api.md  faq.md  index.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: index.ts  style.css
docs/advanced/: browser-usage.md  extensibility.md  performance.md
docs/api/: compute-document-similarity.md  compute-text-similarity.md  extract.md  types.md
docs/examples/: basic-extraction.md  batch-processing.md  error-handling.md  image-processing.md  metadata-extraction.md  similarity-comparison.md
docs/guide/: architecture.md  getting-started.md  similarity.md  supported-formats.md
src/: lib.rs
src/core/: handler.rs  mod.rs  similarity.rs
src/handlers/: docx.rs  image.rs  mod.rs  pdf.rs  pptx.rs  text.rs  xlsx.rs
src/models/: document.rs  metadata.rs  mod.rs  similarity.rs
